--- a/cms-net/Views/Page/Index.cshtml
+++ b/cms-net/Views/Page/Index.cshtml
@@ -1,9 +1,34 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IEnumerable<cms_net.Models.Page>
+
+@{
+    ViewData["Title"] = "View";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>View</h1>
 
+<p>
+    <a asp-action="Create">Crea Nuova Pagina</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Title)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Modifica</a>
+                 <a asp-action="Details" asp-route-id="@item.Id">Visualizza</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
