salvo il lavoro per inserire auth

--- a/cms-net/Views/Page/Components/visore/_View.cshtml
+++ b/cms-net/Views/Page/Components/visore/_View.cshtml
@@ -1,10 +1,11 @@
 ﻿@model cms_net.Models.Component
 
 <div>
-    <h4>Card</h4>
+    <h4>Visore</h4>
     <hr />
-    <spam>Title: </spam>
+
     <spam>Image: </spam>
     <spam>Description: </spam>
-    <span>Footer note: </span>
+
 </div>
+
